[package]
name = "git2-lfs"
version = "0.0.0"
edition = "2024"

[dependencies]
hex = "0.4.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10.9"
thiserror = "2.0.17"
tracing = "0.1.41"
url = "2.5.7"
async-trait = "0.1"
futures = { version = "0.3.31" }
serde_derive = "1.0.228"

reqwest = { optional = true, version = "0.12.24", features = [
  "json",
  "stream",
] }

git2 = { git = "https://github.com/pashokitsme/git2-rs.git", branch = "filter", default-features = false, features = [
  "vendored-libgit2",
] }

[dev-dependencies]
git2-lfs = { path = ".", features = ["reqwest-backend"] }
anyhow = "1.0.100"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
assert_matches = "1.5.0"
assertables = "9.8.2"
tempfile = "3.23.0"
rstest = "0.26.1"
more-asserts = "0.3.1"
ctor = "0.6.1"
copy_dir = "0.1.3"
tokio = { version = "1", features = ["rt", "macros"] }


[features]
default = ["git2-https", "git2-ssh", "reqwest-backend"]

reqwest-backend = ["reqwest"]
git2-https = ["git2/https"]
git2-ssh = ["git2/ssh"]
git2-use-openssl = ["git2/use-openssl"]
git2-vendored-openssl = ["git2/vendored-openssl"]
